--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 before_install:
-  - sudo apt-get install python-numpy python-matplotlib python-mpltoolkits.basemap 
+  - sudo apt-get install cython libhdf4-dev libhdfeos-dev python-numpy python-matplotlib python-mpltoolkits.basemap 
 install:
   - python setup.py install 
 script: cd test; ./test.sh
