--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include Changelog NEWS ccplot.1
 include test/imgcompare test/libtest.sh test/test.sh
+recursive-include man *
 recursive-include bin *
 recursive-include cmap *
